@@ -1,15 +1,14 @@
 package com.ssafy.los.backend.service.sheet;
 
 import com.ssafy.los.backend.domain.entity.Sheet;
-import com.ssafy.los.backend.domain.repository.song.SongRepository;
 import com.ssafy.los.backend.domain.repository.sheet.SheetRepository;
+import com.ssafy.los.backend.domain.repository.song.SongRepository;
 import com.ssafy.los.backend.dto.sheet.request.SheetSearchFilter;
 import com.ssafy.los.backend.dto.sheet.request.SheetUploadForm;
 import com.ssafy.los.backend.dto.sheet.response.SheetDetailViewDto;
 import com.ssafy.los.backend.service.auth.AuthService;
 import com.ssafy.los.backend.util.FileUploadUtil;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.io.Resource;
@@ -61,7 +60,7 @@ public class SheetServiceImpl implements SheetService {
         return sheetRepository.findSheetsByFilter(sheetSearchFilter)
                 .stream()
                 .peek(dto -> dto.loadSongImg(fileUploadUtil))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private String saveSheetFile(MultipartFile file) throws IllegalArgumentException {
